# crewai_demo

./: README.md
.devcontainer/: devcontainer.json
marketing_research_swarm/: .gitignore  ACCURATE_TOKEN_TRACKING_IMPLEMENTATION_COMPLETE.md  ADVANCED_TOOLS_FIXED.md  AGENT_DATA_CACHING_AND_SHARING_SUMMARY.md  AGENT_ORDER_AND_TOKEN_FIXES.md  AGENT_SELECTION_FIX_COMPLETE.md  AGENT_SELECTION_FIX_SUMMARY.md  AGENT_TASK_MAPPING_FIX.md  ANALYSIS_GUIDE.md  ANALYSIS_TEMPLATES_SUMMARY.md  API_BASED_DASHBOARD_IMPLEMENTATION_SUMMARY.md  BLACKBOARD_FIXES_COMPLETE.md  BLACKBOARD_FIXES_SUMMARY.md  BLACKBOARD_IMPLEMENTATION_COMPLETE.md  BLACKBOARD_LANGGRAPH_INTEGRATION_ANALYSIS.md  BLACKBOARD_OPTIMIZATION_COMPLETE.md  CHAT_AGENT_ERROR_HANDLING_FIX.md  CHAT_MODE_IMPLEMENTATION_COMPLETE.md  CHAT_MODE_METADATA_INTEGRATION_SUMMARY.md  CHAT_MODE_SUMMARY.md  CHAT_MODE_WITH_QUERY_TEMPLATES_COMPLETE.md  CHECKPOINT.md  CHECKPOINT_FRONTEND_STARTUP_FIX_COMPLETE.md  COMPLETE_DASHBOARD_FIXES.md  COMPLETE_ERROR_FIXES.md  COMPLETE_TOOL_PARAMETER_ANALYSIS.md  COMPREHENSIVE_BLACKBOARD_ENHANCEMENT.md  COMPREHENSIVE_DASHBOARD_IMPLEMENTATION_COMPLETE.md  COMPREHENSIVE_DYNAMIC_FLOW_IMPLEMENTATION.md  COMPREHENSIVE_FLOW_DASHBOARD_INTEGRATION.md  COMPREHENSIVE_FLOW_FIX_COMPLETE.md  COMPREHENSIVE_FLOW_REMOVED.md  COMPREHENSIVE_FLOW_STATUS_FINAL.md  CONTEXTUAL_ENGINEERING_ALIGNMENT_ANALYSIS.md  CONTEXT_AWARE_TOOLS_FIX.md  CONTEXT_ENGINEERING_ANALYSIS_COMPLETE.md  CONTEXT_ISOLATION_AND_TOKEN_TRACKING_FIXES.md  CONTEXT_ISOLATION_IMPLEMENTATION_COMPLETE.md  CREWAI_FLOW_IMPLEMENTATION.md  CREWAI_RUN_GUIDE.md  (+114 more)
marketing_research_swarm/backend/: .env.example  main.py  requirements.txt
marketing_research_swarm/cache/analysis/: analysis_cache.db
marketing_research_swarm/data/: beverage_sales.csv
marketing_research_swarm/frontend/: .env.local.example  package-lock.json  package.json
marketing_research_swarm/frontend/src/app/: layout.tsx  page.tsx
marketing_research_swarm/frontend/src/components/: analysis-form.tsx  analysis-monitor.tsx  analysis-results.tsx
marketing_research_swarm/frontend/src/types/: api.ts
marketing_research_swarm/src/marketing_research_swarm/: __init__.py  crew.py  crew_optimized.py  crew_runner.py  crew_simple_optimized.py  crew_with_tracking.py  main.py  main_cached.py  main_optimized.py  optimization_manager.py
marketing_research_swarm/src/marketing_research_swarm/blackboard/: __init__.py  agent_dependency_manager.py  blackboard_crew.py  enhanced_agent_dependencies.py  enhanced_token_tracker.py  integrated_blackboard.py  result_reference_system.py  shared_state_manager.py  smart_cache.py  state_aware_agents.py
marketing_research_swarm/src/marketing_research_swarm/cache/: __init__.py  smart_cache.py
marketing_research_swarm/src/marketing_research_swarm/chat/: __init__.py  chat_agent.py
marketing_research_swarm/src/marketing_research_swarm/config/: agents.yaml  agents_brand_performance.yaml  agents_optimized.yaml  agents_roi_analysis.yaml  agents_sales_forecast.yaml  settings.yaml  tasks.yaml  tasks_brand_performance.yaml  tasks_context_aware.yaml  tasks_old.yaml  tasks_optimized.yaml  tasks_roi_analysis.yaml  tasks_sales_forecast.yaml  tasks_with_code_interpreter.yaml  workflow.yaml
marketing_research_swarm/src/marketing_research_swarm/context/: __init__.py  compression_strategies.py  context_manager.py  context_quality.py  contextual_engineering_system.py  enhanced_context_engineering.py  intelligent_context_filter.py  persistent_context_storage.py
marketing_research_swarm/src/marketing_research_swarm/dashboard/: __init__.py  dashboard_core.py  dashboard_core_regular.py  mock_optimization_manager.py
(+72 files in other folders)
