[project]
name = "marketing-research-swarm"
version = "0.1.0"
description = "AI-powered marketing research analysis using CrewAI multi-agent swarm for personalized content creation, campaign optimization, and advanced analytics"
# Corrected authors format to be a list of strings
authors = ["jianfjin <jianfjin@gmail.com>"]
readme = "README.md"
requires-python = ">=3.10, <=3.13"

# Corrected dependencies format to be a valid TOML array of strings.
# Also removed the redundant 'crewai-tools' dependency (see explanation below).
dependencies = [
    "crewai[tools]>=0.34.0", # Using the PEP 508 standard for extras
    "langchain-openai>=0.2.1",
    "langchain-community>=0.3.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "yfinance>=0.2.28",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "setuptools>=68.0.0",
    "PyYAML>=6.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"